--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,8 @@ jobs:
         with:
           fetch-depth: 0
       - name: Release please
-        uses: google-github-actions/release-please-action@v4
+        uses: googleapis/release-please-action@v4
         id: release
-        with:
-          release-type: node
-          package-name: eslint-config
   npm-publish:
     needs: release-please
     if: ${{ needs.release-please.outputs.release-created }}
@@ -40,11 +37,11 @@ jobs:
         with:
           node-version: 18
           cache: "pnpm"
+          registry-url: "https://registry.npmjs.org"
       - name: Install package
         run: pnpm install --frozen-lockfile
       - name: Publish to npm
         run: |
-          pnpm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-          pnpm publish --access public
+          pnpm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
