--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,12 @@ jobs:
         with:
           node-version: 18
           cache: "pnpm"
-          registry-url: "https://registry.npmjs.org"
       - name: Install package
         run: pnpm install --frozen-lockfile
+      - name: Set publishing config
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - name: Publish to npm
         run: |
           pnpm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
