--- a/package.json
+++ b/package.json
@@ -13,19 +13,7 @@
   },
   "author": "shiron-dev",
   "license": "MIT",
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-storybook": "^0.10.2",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "eslint-plugin-unused-imports": "^3.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.57.1",
     "prettier": "^3.3.3"
