--- a/package.json
+++ b/package.json
@@ -1,22 +1,70 @@
 {
   "name": "@shiron-dev/eslint-config",
+  "type": "module",
   "version": "1.7.0",
+  "packageManager": "pnpm@9.12.3",
   "description": "Config of ESLint for me.",
-  "main": "index.js",
+  "author": "shiron-dev",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/shiron-dev/eslint-config.git"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "bin": "./bin/index.js",
+  "files": [
+    "bin",
+    "dist"
+  ],
   "scripts": {
-    "lint": "eslint . && prettier . --check",
-    "lint:fix": "eslint --fix . && prettier . --write"
+    "build": "pnpm typegen && tsup --format esm,cjs --clean --dts",
+    "stub": "tsup --format esm",
+    "dev": "npx @eslint/config-inspector --config eslint.config.ts",
+    "build:inspector": "pnpm build && npx @eslint/config-inspector build",
+    "watch": "tsup --format esm,cjs --watch",
+    "lint": "eslint --flag unstable_ts_config .",
+    "lint:fix": "eslint --flag unstable_ts_config . --fix",
+    "typegen": "esno scripts/typegen.ts",
+    "prepack": "pnpm build",
+    "release": "bumpp && pnpm publish",
+    "test": "vitest",
+    "typecheck": "tsc --noEmit",
+    "prepare": "simple-git-hooks"
   },
-  "author": "shiron-dev",
-  "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@antfu/eslint-config": "^3.8.0"
+  },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "prettier": "^3.3.3"
+    "@eslint-react/eslint-plugin": "^1.15.2",
+    "@eslint/config-inspector": "^0.5.6",
+    "@stylistic/eslint-plugin-migrate": "^2.10.1",
+    "@types/node": "^22.9.0",
+    "eslint": "^9.14.0",
+    "eslint-flat-config-utils": "^0.4.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-typegen": "^0.3.2",
+    "esno": "^4.8.0",
+    "jiti": "^2.4.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "simple-git-hooks": "^2.11.1",
+    "svelte": "^5.1.11",
+    "tsup": "^8.3.5",
+    "vitest": "^2.1.4"
   },
-  "packageManager": "pnpm@9.12.3"
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --flag unstable_ts_config --fix"
+  }
 }
