--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,92 @@
-on: pull_request
+name: Main CI
+
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  ci:
+  build-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
-          run_install: false
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: pnpm
-      - name: Install package
-        run: pnpm install --frozen-lockfile
-      - name: Lint
-        run: pnpm lint
+      - uses: shiron-dev/actions/setup-node@v1.1.0
+      - name: Run install
+        run: |
+          pnpm install --frozen-lockfile
+      - name: Run build
+        run: pnpm run build
+
+  build-inspector-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: shiron-dev/actions/setup-node@v1.1.0
+      - name: Run install
+        run: |
+          pnpm install --frozen-lockfile
+      - name: Run build:inspector
+        run: pnpm run build:inspector
+
+  type-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: shiron-dev/actions/setup-node@v1.1.0
+      - name: Run install
+        run: |
+          pnpm install --frozen-lockfile
+      - name: Run typecheck
+        run: pnpm run typecheck
+
+  lint-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: shiron-dev/actions/setup-node@v1.1.0
+      - name: Run install
+        run: |
+          pnpm install --frozen-lockfile
+      - name: Run lint
+        run: pnpm run lint
+
+  vitest-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: shiron-dev/actions/setup-node@v1.1.0
+      - name: Run install
+        run: |
+          pnpm install --frozen-lockfile
+      - name: Run test
+        run: pnpm run test
+
+  ci-req-check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check all-status-check
+        run: |
+          diff \
+            <(yq ".jobs | del(.all-status-check) | keys.[]" .github/workflows/ci.yml) \
+            <(yq ".jobs.all-status-check.needs.[]" .github/workflows/ci.yml)
+
+  all-status-check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs:
+      - build-test
+      - build-inspector-test
+      - type-test
+      - lint-test
+      - vitest-test
+      - ci-req-check
+    steps:
+      - name: All status check
+        run: echo "All status checks passed"
