--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "eslint": "^9.14.0",
     "eslint-flat-config-utils": "^0.4.0",
     "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-solid": "^0.14.3",
+    "eslint-plugin-svelte": "^2.46.0",
     "eslint-typegen": "^0.3.2",
     "esno": "^4.8.0",
     "jiti": "^2.4.0",
