--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@eslint-react/eslint-plugin": "^1.15.2",
     "@eslint/config-inspector": "^0.5.6",
     "@stylistic/eslint-plugin-migrate": "^2.10.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "eslint-flat-config-utils": "^0.4.0",
@@ -54,6 +55,9 @@
     "eslint-plugin-svelte": "^2.46.0",
     "eslint-typegen": "^0.3.2",
     "esno": "^4.8.0",
+    "execa": "^9.5.1",
+    "fast-glob": "^3.3.2",
+    "fs-extra": "^11.2.0",
     "jiti": "^2.4.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
