--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,12 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+*.lerna_backup
+_fixtures
+
+.temp
+.history
+
+src/typegen.d.ts
+.eslint-config-inspector
