--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,24 +24,24 @@ jobs:
         uses: googleapis/release-please-action@v4
         id: release
 
-  pages-publish:
+  inspector-publish:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
     needs: release-please
     if: ${{ needs.release-please.outputs.release-created }}
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: shiron-dev/actions/setup-node@v1.1.0
-      - name: Install package
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Run build
         run: pnpm run build:inspector
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
         with:
-          path: ./.eslint-config-inspector
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy ./.eslint-config-inspector --project-name=eslint-config
 
   npm-publish:
     needs: release-please
